--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="bootstrap-trial.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="webpages/products-main.html">PRODUCTS</a>
+                        <a class="nav-link" href="products-main.html">PRODUCTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="webpages/services.html">SERVICES</a>
+                        <a class="nav-link" href="services.html">SERVICES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="webpages/about-us.html">ABOUT US</a>
+                        <a class="nav-link" href="about-us.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="webpages/contact-us.html">CONTACT US</a>
+                        <a class="nav-link" href="contact-us.html">CONTACT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="webpages/blogs-content.html">BLOGS</a>
+                        <a class="nav-link" href="blogs-content.html">BLOGS</a>
                     </li>
                 </ul>
             </div>
@@ -226,6 +226,7 @@
                 It comes here.
             </div>
         </section>
+        <!-- FOOTER -->
         <footer class="footer bg-dark text-white">
             <div class="container">
               <div class="row">
