--- a/attributions.html
+++ b/attributions.html
@@ -1,103 +1,127 @@
 <!DOCTYPE html>
 <html lang="en-in">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            HOME | Trio - The HVAC Company
-        </title>
-        <link rel="icon" type="img" href="resources/trio-logo.jpg">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>    
-        <link rel="stylesheet" href="css/style-attributions.css">
-    </head>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="resources/trio-logo.jpg" alt="Trio Logo" width="20%"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link"  href="index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products-main.html">PRODUCTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">ABOUT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">CONTACT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blogs-content.html">BLOGS</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <body>
-        <h3>Icons</h3>
-        <a href="https://www.flaticon.com/free-icons/mail" title="mail icons">Mail icons created by Freepik - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Pixel perfect - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/youtube" title="youtube icons">Youtube icons created by Freepik - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/phone" title="phone icons">Phone icons created by Gregor Cresnar - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by Ruslan Babkin - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Ruslan Babkin - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/map" title="map icons">Map icons created by Pixel perfect - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/left" title="left icons">Left icons created by Ilham Fitrotul Hayat - Flaticon</a><br>
-        <a href="https://www.flaticon.com/free-icons/next" title="next icons">Next icons created by Smashicons - Flaticon</a><br>
 
-        <footer class="footer bg-dark text-white">
-            <div class="container">
-              <div class="row">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        HOME | Trio - The HVAC Company
+    </title>
+    <link rel="icon" type="img" href="resources/trio-logo.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style-attributions.css">
+</head>
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="resources/trio-logo.jpg" alt="Trio Logo" width="20%"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="products-main.html">PRODUCTS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about-us.html">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact-us.html">CONTACT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="blogs-content.html">BLOGS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<button onclick="topFunction()" id="myBtn" title="Go to top"><img src="resources/icons/top.png" alt="Top" class="icons-img"></button> 
+<body>
+    <h3>Icons</h3>
+    <a href="https://www.flaticon.com/free-icons/mail" title="mail icons">Mail icons created by Freepik -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons
+        created by Pixel perfect - Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/youtube" title="youtube icons">Youtube icons created by Freepik -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/phone" title="phone icons">Phone icons created by Gregor Cresnar -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/linkedin" title="linkedin icons">Linkedin icons created by Ruslan
+        Babkin - Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Ruslan
+        Babkin - Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/map" title="map icons">Map icons created by Pixel perfect -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/left" title="left icons">Left icons created by Ilham Fitrotul Hayat -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/next" title="next icons">Next icons created by Smashicons -
+        Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/up-arrow" title="up arrow icons">Up arrow icons created by IconKanan -
+        Flaticon</a><br>
+
+    <footer class="footer bg-dark text-white">
+        <div class="container">
+            <div class="row">
                 <div class="col-md-4">
-                  <h5>Sales</h5>
-                  <b>Email:</b> <a href="mailto:triosales2016@gmail.com">triosales2016@gmail.com</a><br>
-                  <b>Phone:</b> <a href="tel:+917574853200">+91 75748 53200</a>
+                    <h5>Sales</h5>
+                    <b>Email:</b> <a href="mailto:triosales2016@gmail.com">triosales2016@gmail.com</a><br>
+                    <b>Phone:</b> <a href="tel:+917574853200">+91 75748 53200</a>
                 </div>
                 <div class="col-md-4">
                     <h5>Service</h5>
-                    <b>Email:</b> <a href="mailto:triohomeappliances@rediffmail.com">triohomeappliances@rediffmail.com</a><br>
+                    <b>Email:</b> <a
+                        href="mailto:triohomeappliances@rediffmail.com">triohomeappliances@rediffmail.com</a><br>
                     <b>Phone:</b> <a href="tel:+917574853191">+91 75748 53191</a>
                 </div>
                 <div class="col-md-4">
                     <h5>Office</h5>
-                        <a href="https://maps.app.goo.gl/pX9hNFYom5ctUPCEA" class="footer-links"><address>Trio - The HVAC Company <br>
+                    <a href="https://maps.app.goo.gl/pX9hNFYom5ctUPCEA" class="footer-links">
+                        <address>Trio - The HVAC Company <br>
                             209, 2nd Floor, Addore Aspire, Opp. Janhvi<br>
-                             Restaurant, Nr. Old Passport office,<br>
+                            Restaurant, Nr. Old Passport office,<br>
                             University Road, Ahmedabad - 380015<br>
                             (Click for Google Maps)
-                        </address></a>
-                  </div>
-                  <div class="col-md-4">
-                    <h5>Service Center</h5>
-                    <a href="https://maps.app.goo.gl/PDmaBzfiZkYCMVyv5" class="footer-links"><address>Trio - The HVAC Company <br>
-                        Gayatri Sadan, Jagabhai Park Society, <br>
-                        Near H.P. Petrol Pump Lane, <br>
-                        Rambaug, Maninagar - 380008 <br>   
-                        (Click for Google Maps)              
-                        </address></a>
-                  </div>
-                <div class="col-md-4">
-                  <h5>Follow Us</h5>
-                  <ul class="list-inline">
-                    <li class="list-inline-item"><a href="https://www.facebook.com/trioacamd"><img class="icons-img" src="resources/icons/facebook.png" alt="Facebook"></a></li>
-                    <li class="list-inline-item"><a href="https://www.instagram.com/trio_the.hvac.company"><img class="icons-img" src="resources/icons/instagram.png" alt="Instagram"></a></li>
-                    <li class="list-inline-item"><a href="https://www.linkedin.com/company/trio-hvac/"><img class="icons-img" src="resources/icons/linkedin.png" alt="LinkedIn"></a></li>
-                    <li class="list-inline-item"><a href="https://www.youtube.com/@triohomeappliances7772"><img class="icons-img" src="resources/icons/youtube.png" alt="YouTube"></a></li>                
-                  </ul>
+                        </address>
+                    </a>
                 </div>
-              </div>
+                <div class="col-md-4">
+                    <h5>Service Center</h5>
+                    <a href="https://maps.app.goo.gl/PDmaBzfiZkYCMVyv5" class="footer-links">
+                        <address>Trio - The HVAC Company <br>
+                            Gayatri Sadan, Jagabhai Park Society, <br>
+                            Near H.P. Petrol Pump Lane, <br>
+                            Rambaug, Maninagar - 380008 <br>
+                            (Click for Google Maps)
+                        </address>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <h5>Follow Us</h5>
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="https://www.facebook.com/trioacamd"><img class="icons-img"
+                                    src="resources/icons/facebook.png" alt="Facebook"></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com/trio_the.hvac.company"><img
+                                    class="icons-img" src="resources/icons/instagram.png" alt="Instagram"></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/company/trio-hvac/"><img
+                                    class="icons-img" src="resources/icons/linkedin.png" alt="LinkedIn"></a></li>
+                        <li class="list-inline-item"><a href="https://www.youtube.com/@triohomeappliances7772"><img
+                                    class="icons-img" src="resources/icons/youtube.png" alt="YouTube"></a></li>
+                    </ul>
+                </div>
             </div>
-            <p id="copyright">&copy; Vidit Parikh 2024</p>
-          </footer>
-        <script src="js/scipt-index.js"></script>
-    </body>
+        </div>
+        <p id="copyright">&copy; Vidit Parikh 2024</p>
+    </footer>
+    <script src="js/scipt-index.js"></script>
+</body>
+
 </html>
